--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-loading-spin": "^2.1.9",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.2",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
