--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "localforage": "^1.10.0",
@@ -21,6 +22,8 @@
     "react-loading-spin": "^2.1.9",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.2",
+    "react-tabs": "^6.0.1",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.5"
   },
